--- a/css/main.css
+++ b/css/main.css
@@ -118,17 +118,24 @@ textarea {
        color: #FFE600; 
        font-family: 'Lato', sans-serif;
     }
+    h2, h3, h4, h5, .button, .label, h6 {
+        font-family: 'Montserrat', sans-serif;
+        text-transform: uppercase;
+        padding: 0;
+        margin: 0;
+    }
     .button {
         border: solid 4px #FFE600;
-        padding: 10px 50px;
+        padding: 5px 43px;
         display: inline-block;
         text-decoration: none;
         font-weight: 700;
+        font-size: 1.1em;
     }
     .label {
         background: #FFE600;
         color: #03284A;
-        font-size: .6em; 
+        font-size: .7em; 
         display: inline-block;
         font-weight: 700;
         padding: .5em;
@@ -140,11 +147,8 @@ textarea {
     h3 {
         font-size: 2.5em;
     }
-    h2, h3, h4, h5, .button, .label {
-        font-family: 'Montserrat', sans-serif;
-        text-transform: uppercase;
-    }
-    h4, h5 {
+    
+    h4, h5, h6 {
         color: white;
     }
     h5 {
@@ -153,6 +157,12 @@ textarea {
     h4 {
         font-size: 1.5em;
         font-family: 'Lato', sans-serif;
+      
+    }
+    h6 {
+        font-size: .7em;
+    
+      
     }
 /* ==========================================================================
    Header: logo ; awards
@@ -171,12 +181,15 @@ textarea {
         display: block;
         position: absolute;
         margin: 0;
+        padding: 0;
     }
     .logo {
         position: fixed;
         top: 15px;
         left: 10px;
         z-index: 1000;
+        margin: 0;
+        padding: 0;
     }
     .nav-icon-open {
         background: #ffe600;
@@ -198,45 +211,71 @@ textarea {
        height: 100vh;
        position: relative;
    }
-   .jumbotron-content p.time-date {
+   .jumbotron {
+        position: relative;
+        width: 75%;
+        height: 67vh;
+        left: 105px;
+        top: 120px;
+        z-index: 10;
+        box-shadow: 0 16px 16px -5px rgba(0, 0, 0, 0.2);
+    }
+    .jumbotron-image {
+        background-image: url("../img/people/meetup_pic_Andre-1920x1080.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        width: 100%;
+        height: 67vh;
+        position: absolute;
+    } 
+
+/* content over jumbotron-image------------------ */
+    .jumbotron-content {
+        position: relative;
+        width: 100%;
+        height: 67vh;
+    }
+    .jumbotron-content p.time-date {
        color: rgba(255, 255, 255, 0.7);
        font-size: 1.2em;
    }
-   .jumbotron-content {
+   .content-a {
        position: absolute;
-       z-index: 300;
+       top: 35px;
+       left: 30px;
    }
-   .jumbotron-image {
-       background-image: url("../img/people/meetup_pic_Andre-1920x1080.jpg");
-       background-size: cover;
-       background-repeat: no-repeat;
-       background-position: center center;
-       border: solid blue 2px;
-       width: 100%;
-       height: 67vh;
+   .content-b {
        position: absolute;
-       z-index: 100;
-   } 
-   .jumbotron {
-       position: absolute;
-       width: 75%;
-       height: 67vh;
-       left: 105px;
-       top: 120px;
-       border: solid red 2px;
-       z-index: 200;
-       background-color: blue;
+       bottom: 60px;
+       left: 30px;
    }
+   .content-a .label {
+       margin: 1.3em 0 0 0;
+   }
+   .content-b h4 {
+       padding: 10px 0 0 0;
+       margin: 0;
+   }
+   .content-b .time-date {
+       padding: 10px 0 30px 0;
+       margin: 0;
+   }
+/* gradiant for "upcoming-episode"------------------ */
    .upcoming-episode-gradiant {
        background: linear-gradient(to bottom left, #E54B4B, #224FB4);
-       position: absolute;
-       height: 65vh;
+       height: 64vh;
        width: 67%;
        right: 105px;
        bottom: 30px;
-       z-index: 0;
+       position: absolute;
+       z-index: 0; 
    }
-
+   .upcoming-episode-gradiant h6 {
+       position: absolute;
+       bottom: 20px;
+       left: 30px;
+   }
 
 
 
