--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,10 @@ textarea {
        color: #FFE600; 
        font-family: 'Lato', sans-serif;
     }
-    h2, h3, h4, h5, .button, .label, h6, a {
+    section {
+        margin: 60px 0 0 0;
+    }
+    h2, h3, h4, h5, .button, .label, h6, a, .paragraph-titles {
         font-family: 'Montserrat', sans-serif;
         text-transform: uppercase;
         padding: 0;
@@ -173,9 +176,20 @@ textarea {
     }
     h6 {
         font-size: .7em;
-    
-      
     }
+    .paragraph-titles {
+        text-transform: none;
+        font-size: 2.2em;
+        font-weight: bold;
+        line-height: 1.2;
+    }
+    p {
+        font-family: 'Lato', sans-serif;
+        font-size: 1.1em;
+        font-weight: none;
+        line-height: 1.3em;
+    }
+    
 /* ==========================================================================
    Header: logo ; awards
    ========================================================================== */
@@ -288,7 +302,85 @@ textarea {
        bottom: 20px;
        left: 30px;
    }
+/* ==========================================================================
+Section: "Sponsers"
+   ========================================================================== */
+.sponsors {
+    position: relative;
+}
+/*--Sponsors Gradiant--------------------*/
+.sponsors-gradiant {
+    width: 24%;
+    height: 450px;
+    background: linear-gradient(to bottom left, #E54B4B, #224FB4);
+    position: absolute;
+    top: 30px;
+    right: 125px;
+}
+.sponsors-gradiant-content {
+    text-align: left;
+    padding: 2em 3em 2em 2em;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.sponsors-gradiant-content p {
+    color: white;
+}
+.sponsors-gradiant-content p.paragraph-titles {
+    color: #FFE600;
+    padding: 0 0 .5em 0;
+}
+/*--Sponsors logos and button--------------------*/
 
+.sponsors-logos-container {
+    background: white;
+    width: 56%;
+    height: 72vh;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 10% 60px 60px;
+    margin: 0 0 0 125px;
+}
+.sponsors-logos-img {
+    flex: 9;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 10px 10px;
+    justify-content: center;
+}
+.sponsors-logos-img article.company {
+    flex: 1 1 33.3%;
+    max-width: 28%;
+    margin: 5px;
+    position: relative;
+}
+.sponsors-logos-img article.company img {
+    width: 80%;
+}
+.sponsors-logos-img-overlay {
+    background: rgba(255, 255, 255, 0.5);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.sponsors-logos-img article.company:hover > .sponsors-logos-img-overlay {
+    background: transparent;
+}
+.sponser-button {
+    flex: 1;
+    margin: 15px 0 0 0;
+    padding: 15px 0;
+}
+.sponser-button .button {
+    color: #03284A;
+    border-color: #03284A;
+}
+.sponser-button .button:hover {
+    color: white;
+    background: #03284A;
+}
 /* ==========================================================================
 Footer: "newsletter" section; bottom-nav/social media
 ========================================================================== */
