--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,10 @@ textarea {
         padding: 0;
         margin: 0;
     }
+    em {
+        text-decoration: line-through;
+        font-style: normal;
+    }
     ul {
         list-style-type: none;
     }
@@ -158,7 +162,7 @@ textarea {
         color: #03284A;
     }
     h2 {
-        font-size: 4.5em;
+        font-size: 4em;
     }
     h3 {
         font-size: 2.5em;
@@ -182,6 +186,7 @@ textarea {
         font-size: 2.2em;
         font-weight: bold;
         line-height: 1.2;
+        padding: 0 0 .4em 0;
     }
     p {
         font-family: 'Lato', sans-serif;
@@ -302,6 +307,46 @@ textarea {
        bottom: 20px;
        left: 30px;
    }
+
+/* ==========================================================================
+   Section: "bios"
+   ========================================================================== */
+.bio-container {
+    position: relative;
+}
+.bio-content {
+    background: linear-gradient(to bottom left, #6ACEA3, #15ADC2);
+    width: 52%;
+    height: 53vh;
+    position: relative;
+    margin: 0 0 0 125px;
+    padding: 60px 160px 60px 60px;
+}
+.bio p {
+    color: white;
+}
+.bio p.paragraph-titles {
+    color: #03284A;
+}
+.bio h2{
+    margin: .5em 0 .5em 125px;
+}
+.bio .button {
+    color: #03284A;
+    border-color: #03284A;
+    margin: 1em 0 0 0;
+}
+.bio .button:hover {
+    background: #03284A;
+    color: white;
+}
+.bio-image {
+    width: 30%;
+    position: absolute;
+    top: 30px;
+    right: 125px;
+}
+
 /* ==========================================================================
 Section: "Sponsers"
    ========================================================================== */
@@ -329,7 +374,6 @@ Section: "Sponsers"
 }
 .sponsors-gradiant-content p.paragraph-titles {
     color: #FFE600;
-    padding: 0 0 .5em 0;
 }
 /*--Sponsors logos and button--------------------*/
 
