--- a/css/main.css
+++ b/css/main.css
@@ -118,9 +118,6 @@ textarea {
        color: #FFE600; 
        font-family: 'Lato', sans-serif;
     }
-    section {
-        margin: 60px 0 0 0;
-    }
     h2, h3, h4, h5, .button, .label, h6, a, .paragraph-titles {
         font-family: 'Montserrat', sans-serif;
         text-transform: uppercase;
@@ -307,6 +304,59 @@ textarea {
        bottom: 20px;
        left: 30px;
    }
+/* ==========================================================================
+   Section: "spaces"
+   ========================================================================== */
+.spaces-container {
+    position: relative;
+}
+.spaces-content {
+    background: linear-gradient(to bottom right, #E54B4B, #FFE600);
+    width: 52%;
+    height: 65vh;
+    position: relative;
+    margin: 0 0 0 370px;
+    padding: 60px 60px 60px 160px;
+}
+.spaces p {
+    color: white;
+}
+.spaces p.paragraph-titles {
+    color: #03284A;
+}
+.spaces h2{
+    margin: .5em 0 90px 125px;
+}
+.spaces .button {
+    color: #03284A;
+    border-color: #03284A;
+    margin: 1em 0 0 0;
+}
+.spaces .button:hover {
+    background: #03284A;
+    color: white;
+}
+.spaces-image {
+    position: absolute;
+    top: -60px;
+    left: 160px;
+    width: 30%;
+}
+.spaces-label .label {
+    color: #03284A;
+    background-color: #15ADC2;
+    padding: .5em 1em 3em 1em;
+    font-size: 1em;
+}
+.spaces-label {
+    transform: rotate(270deg);
+    height: 80px;
+    width: 300px;
+    position: absolute;
+    top: 0;
+    left: 15px;
+    z-index: -5;
+}
 
 /* ==========================================================================
    Section: "bios"
@@ -316,8 +366,8 @@ textarea {
 }
 .bio-content {
     background: linear-gradient(to bottom left, #6ACEA3, #15ADC2);
-    width: 52%;
-    height: 53vh;
+    width: 54%;
+    height: 52vh;
     position: relative;
     margin: 0 0 0 125px;
     padding: 60px 160px 60px 60px;
