--- a/css/main.css
+++ b/css/main.css
@@ -118,14 +118,13 @@ textarea {
        color: #FFE600; 
        font-family: 'Lato', sans-serif;
     }
-    h2, h3, h4, h5, .button, .label, h6, a, .paragraph-titles {
-        font-family: 'Montserrat', sans-serif;
-        text-transform: uppercase;
-        padding: 0;
-        margin: 0;
-    }
     section {
-        margin: 60px 0 0 0;
+        margin: 120px 0 0 0;
+    }
+    p {
+        font-family: 'Lato', sans-serif;
+        font-size: 1.1em;
+        line-height: 1.3em;
     }
     em {
         text-decoration: line-through;
@@ -144,26 +143,6 @@ textarea {
     a.label {
         border: none;
     }
-    .button {
-        border: solid 4px #FFE600;
-        padding: 5px 43px;
-        display: inline-block;
-        text-decoration: none;
-        font-weight: 700;
-        font-size: 1.1em;
-    }
-    .label {
-        background: #FFE600;
-        color: #03284A;
-        font-size: .7em; 
-        display: inline-block;
-        font-weight: 700;
-        padding: .5em;
-    }
-    .button:hover {
-        background: #FFE600;
-        color: #03284A;
-    }
     h2 {
         font-size: 4em;
     }
@@ -179,10 +158,36 @@ textarea {
     h4 {
         font-size: 1.5em;
         font-family: 'Lato', sans-serif;
-      
     }
     h6 {
         font-size: .7em;
+    }
+    h2, h3, h4, h5, .button, .label, h6, a, .paragraph-titles {
+        font-family: 'Montserrat', sans-serif;
+        text-transform: uppercase;
+        padding: 0;
+        margin: 0;
+    }
+    .button {
+        border: solid 4px #FFE600;
+        padding: 5px 43px;
+        display: inline-block;
+        text-decoration: none;
+        font-weight: 700;
+        font-size: 1.1em;
+        color: #FFE600;
+    }
+    .label {
+        background: #FFE600;
+        color: #03284A;
+        font-size: .7em; 
+        display: inline-block;
+        font-weight: 700;
+        padding: .5em;
+    }
+    .button:hover {
+        background: #FFE600;
+        color: #03284A;
     }
     .paragraph-titles {
         text-transform: none;
@@ -191,13 +196,6 @@ textarea {
         line-height: 1.2;
         padding: 0 0 .4em 0;
     }
-    p {
-        font-family: 'Lato', sans-serif;
-        font-size: 1.1em;
-        font-weight: none;
-        line-height: 1.3em;
-    }
-    
 /* ==========================================================================
    Header: logo ; awards
    ========================================================================== */
@@ -232,7 +230,7 @@ textarea {
         border: none;
     }
     /* navigation icon----------------------------*/
-    .menuOpener{
+    .menu-opener{
         background-color: #FFE600;
         display: block;
         padding: 15px 3px;
@@ -273,7 +271,7 @@ textarea {
         width: 75%;
         height: 67vh;
         left: 105px;
-        top: 120px;
+        top: 105px;
         z-index: 10;
         box-shadow: 0 16px 16px -5px rgba(0, 0, 0, 0.2);
     }
@@ -381,12 +379,13 @@ textarea {
    Section: "recent episodes"
    ========================================================================== */
 .recent-episodes {
-    width: 750px;
     position: relative;
-    margin: 0 0 0 125px;
+    margin: 0 0 0 12%;
+    width: 75%;
 }
 .recent-episodes-header {
     position: relative;
+    margin: 75px 0 0 0;
 }
 .recent-episodes-header .button {
     position: absolute;
@@ -394,30 +393,29 @@ textarea {
     transform: translateY(-50%);
     right: 0;
 }
-/* 'episodes' articles -------------*/
+/* episode declarations -------------*/
 .episode-container {
     display: flex;
-    flex-wrap: wrap;
-    margin: 30px -19px 0 -19px;
-    position: relative;
-    perspective: 1000px;
-}
-.episode-container-overlay {
-    z-index: 20;
-    position: absolute;
-    height: 68vh;
-    width: 330px;
+    position: relative; 
+    margin: 30px 0 0 0;
+    height: 67vh;
+    width: 100%;
+    justify-content: space-between;
 }
 .episode {
-    flex-basis: 0;
-    flex-grow: 1;
-    padding: 0 15px;
-    width: 100%;
-    display: flex;
-    justify-content: left;
+    width: 44%;
+    position: relative;
 }
-.offset-episode {
-    justify-content: right;
+.episode-overlay {
+    z-index: 20;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+.episode-main-content {
+    position: absolute;
+    height: 100%;
+    width: 100%;
 }
 .label-container {
     width: 270px;
@@ -428,17 +426,10 @@ textarea {
     left: 50%;
     transform: translateX(-50%);
 }
-.episode-container-overlay .label {
+.episode-overlay .label {
     position: absolute;
     top: 15px;
     left: 15px;
-}
-.episodes {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    height: 68vh;
-    width: 330px;
 }
 #bruno .episodes-img {
     flex: 1;
@@ -446,6 +437,7 @@ textarea {
     background-position: center center;
     background-size: cover;
     padding: 0 0 1.4em 0;
+    height: 50%;
 }
 #ana .episodes-img {
     flex: 1;
@@ -453,6 +445,7 @@ textarea {
     background-position: center center;
     background-size: cover;
     padding: 0 0 1.4em 0;
+    height: 50%;
 }
 /* episodes-content------------------------- */
 .episodes-content {
@@ -460,6 +453,7 @@ textarea {
     flex: 1;
     color: #03284A;
     padding: 3em 30px 1em 2em;
+    height: 50%;
 }
 .episodes-content p {
     line-height: 1em;
@@ -483,11 +477,11 @@ textarea {
     transform: translateX(-50%);
     position: relative;
 }
-.episode-container-overlay .button {
+.episode-overlay .button {
     color: #E54B4B;
     border-color: #E54B4B;
 }
-.episode-container-overlay .button:hover {
+.episode-overlay .button:hover {
     color: #03284A;
     background: #E54B4B;
 }
@@ -506,7 +500,7 @@ textarea {
     width: 52%;
     height: 65vh;
     position: relative;
-    margin: 0 0 0 370px;
+    margin: 0 0 0 37%;
     padding: 60px 60px 60px 160px;
 }
 .spaces p {
@@ -527,11 +521,12 @@ textarea {
     background: #03284A;
     color: white;
 }
-.spaces-image {
+.spaces img {
     position: absolute;
     top: -60px;
     left: 160px;
     width: 30%;
+    display: block;
 }
 .spaces-label .label {
     color: #03284A;
@@ -581,11 +576,12 @@ textarea {
     background: #03284A;
     color: white;
 }
-.bio-image {
+.bio img {
     width: 30%;
     position: absolute;
     top: 30px;
     right: 125px;
+    display: block;
 }
 
 /* ==========================================================================
@@ -594,18 +590,25 @@ Section: "Sponsers"
 .sponsors {
     position: relative;
 }
+.sponsors h2 {
+    text-indent: -999px;
+    display: block;
+    position: absolute;
+    margin: 0;
+    padding: 0;
+}
 /*--Sponsors Gradiant--------------------*/
 .sponsors-gradiant {
-    width: 24%;
+    width: 23%;
     height: 450px;
     background: linear-gradient(to bottom left, #E54B4B, #224FB4);
     position: absolute;
     top: 30px;
-    right: 125px;
+    right: 12.5%;
 }
 .sponsors-gradiant-content {
     text-align: left;
-    padding: 2em 3em 2em 2em;
+    padding: 2em 2em 2em 2em;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -628,20 +631,18 @@ Section: "Sponsers"
     margin: 0 0 0 125px;
 }
 .sponsors-logos-img {
-    flex: 9;
     display: flex;
     flex-wrap: wrap;
+    flex: 9;
     width: 100%;
     padding: 10px 10px;
-    justify-content: center;
 }
-.sponsors-logos-img article.company {
-    flex: 1 1 33.3%;
-    max-width: 28%;
+.sponsors-logos-img .company {
+    width: 28%;
     margin: 5px;
     position: relative;
 }
-.sponsors-logos-img article.company img {
+.sponsors-logos-img li.company img {
     width: 80%;
 }
 .sponsors-logos-img-overlay {
@@ -650,7 +651,7 @@ Section: "Sponsers"
     width: 100%;
     height: 100%;
 }
-.sponsors-logos-img article.company:hover > .sponsors-logos-img-overlay {
+.sponsors-logos-img li.company:hover > .sponsors-logos-img-overlay {
     background: transparent;
 }
 .sponser-button {
